Fix a spacing bug in orchestra names; set white-space to pre-wrap to make those visible in web version

--- a/web/vintage-bands.css
+++ b/web/vintage-bands.css
@@ -19,6 +19,8 @@
 	font-weight: bold;
 	font-size: 1.33em;
 	color: #a16d4e;
+	white-space: pre-wrap;
+}
 
 #generate-button {
 	margin: 1em auto;
